Do not pass logger to ShardRecoveryCoordinator
We are already logging our member name, so use a normal, per-class
logger instead of getting it passed from Shard.

Change-Id: I1075c6dd8bfb4fce41d8baa04750a2aaf4ae6c91
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>